--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <title></title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100%; width: 100% }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/knockout/dist/knockout.js"></script>
     <script type="text/javascript" src="bower_components/sammy/lib/min/sammy-latest.min.js"></script>
@@ -17,6 +13,7 @@
     </script>
   </head>
   <body>
+    <input id="searchbox" class="controls" type="text" placeholder="Search Box">
     <div id="map-canvas"></div>
     <script type="text/javascript" src="app.js"></script>
   </body>
