Search box searches

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="bower_components/knockout/dist/knockout.js"></script>
     <script type="text/javascript" src="bower_components/sammy/lib/min/sammy-latest.min.js"></script>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkz4bvDuB9C_NOw3EIBpVf4U3I4bNHMgc">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkz4bvDuB9C_NOw3EIBpVf4U3I4bNHMgc&signed_in=true&libraries=places">
     </script>
   </head>
   <body>
