Added view bindings for marker list

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <input id="searchbox" class="controls" type="text" placeholder="Search Box">
+      <ul id="markerList" class="markerList" data-bind="foreach: points">
+        <li data-bind="text: name"></li>
+      </ul>
     <div id="map-canvas"></div>
     <script type="text/javascript" src="app.js"></script>
   </body>
