Style marker list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <input id="searchbox" class="controls" type="text" placeholder="Search Box">
-      <ul id="markerList" class="markerList" data-bind="foreach: points">
+      <ul id="markerList" class="" data-bind="foreach: points">
         <li data-bind="text: name"></li>
       </ul>
     <div id="map-canvas"></div>
